# VideoActionModel

./: .flake8  .gitignore  CITATION.cff  LICENSE  LICENSE_DATA  LICENSE_MODEL  MODELS.md  README.md  adastra_slurm_job_submit.py  dev_requirements.txt  jeanzay_slurm_job_submit.py  lint.sh  pyproject.toml  requirements.txt  setup.py
configs/: eval.yaml  inference.yaml  inference_ncap.yaml  train.yaml
configs/callbacks/: callbacks_action_training.yaml  callbacks_debug.yaml  callbacks_finetuning.yaml  callbacks_nuplan_training.yaml  callbacks_nuscenes_finetuning.yaml  callbacks_opendv_grid_search.yaml  callbacks_opendv_training.yaml  callbacks_training.yaml  device_stats_monitor.yaml  learning_rate_monitor.yaml  model_checkpoint.yaml  model_summary.yaml  tqdm_progress_bar.yaml  trajectory_logging.yaml
configs/data/: ego_trajectory_dataset.yaml  finetuning_mix.yaml  packed_tokens_opendv.yaml  pickled_tokenized_sequence_opendv.yaml  tokenized_sequence_nuplan.yaml  tokenized_sequence_nuscenes.yaml  tokenized_sequence_opendv.yaml  tokenized_with_action_nuscenes.yaml
configs/debug/: default.yaml  gpu_limit_batches.yaml  gpu_overfit.yaml  overfit.yaml
configs/experiment/: DummyGPT_vqgan_imagenet_f16_1024.yaml  DummyGPT_vqgan_open_image_f8_16384.yaml  Finetuning_imitation_learning_nuscenes.yaml  GPT2_vqgan_imagenet_f16_1024.yaml  GPT2_vqgan_openimages_f8_16384.yaml  action_learning.yaml  finetune_mix_complet.yaml  finetune_opendv_nuscenes.yaml  muP_GPT2_VQ_ds16_16384_llamagen_nuplan_noaction.yaml  muP_GPT2_VQ_ds16_16384_llamagen_opendv_noaction.yaml  muP_GPT2_VQ_ds16_16384_llamagen_opendv_noaction_packed.yaml  muP_GPT2_VQ_ds16_16384_llamagen_opendv_noaction_packed_32nodes.yaml  muP_GPT2_VQ_ds16_16384_llamagen_opendv_noaction_packed_48nodes.yaml  muP_GPT2_VQ_ds16_16384_llamagen_opendv_noaction_packed_6nodes.yaml  muP_GPT2_VQ_ds16_16384_llamagen_opendv_noaction_stage_1.yaml  muP_GPT2_VQ_ds16_16384_llamagen_opendv_noaction_stage_2.yaml  muP_GPT2_VQ_ds16_16384_llamagen_opendv_noaction_stage_3.yaml  muP_GPT2_vqgan_imagenet_f16_1024.yaml  video_pretraining.yaml  video_pretraining_GPT2_llamagen_ds16_16384_opendv.yaml
configs/hydra/: default.yaml
configs/logger/: csv.yaml  many_loggers.yaml  tensorboard.yaml  wandb.yaml
configs/model/: next_token_predictor.yaml  next_token_predictor_imitation.yaml
configs/optimizer/: adamW.yaml  muAdamW.yaml
configs/paths/: adastra.yaml  adastra_debug.yaml  adastra_nuplan.yaml  atnorth.yaml  default.yaml  eval_paths_jeanzay.yaml  eval_paths_local.yaml  jeanzay_debug.yaml  jeanzay_nuplan.yaml  valeo.yaml  valeo_debug.yaml
configs/scheduler/: step_lr.yaml  warmup_stable_drop.yaml
docker/: DockerFile  Dockerfile
inference/: README.md  llamagen.py  run_docker.sh  runner.py  server.py
mup_shapes/: actionexpert_24layers_baseattentiondim256_baseembeddingdim64.bsh  gpt2_12layers_16timesteps_basewidth128.bsh  gpt2_24layers_basewidth256.bsh  gpt2_24layers_nobias_basewidth128.bsh  gpt2_24layers_nobias_basewidth128_with_commands.bsh
notebooks/: COMMAND_creator.ipynb  GPT2 model size.ipynb  GS_128_0-9.sh  GS_128_10-19.sh  GS_128_20-29.sh  GS_128_30-39.sh  GS_128_40-49.sh  GS_256_0-9.sh  GS_256_10-19.sh  GS_256_20-29.sh  GS_256_30-39.sh  GS_256_40-49.sh  mup_set_scale.ipynb  qualitative_study_diffusion.ipynb  qualitative_study_video_generation.ipynb
opendv/: README.md  token_creator.py
scripts/: README.md  action_learning.sh  activate_world_model_env.sh  activate_world_model_env_adastra.sh  check_flash_attention.py  create_nuscenes_command.py  create_opendv_tokens.py  create_vam_env_jeanzay.sh  create_world_model_env.sh  create_world_model_env_adastra.sh  create_worldmodel_env_adastra.sh  create_worldmodel_env_jeanzay.sh  depth_anything_a_dataset.py  download_pretrained_models.py  evaluate_ego_trajectory.py  evaluate_ego_trajectory.slurm  fuse_multiple_checkpoints.py  fused_checkpoint.py  fused_checkpoint.sh  gen_nuscenes_pickle.py  get_and_split_opendv_windows_pickle.py  get_nuplan_max_train_steps.py  handle_checkpoints.py  hbird_eval.py  hbird_evaluation.py  hbird_evaluation.slurm  hbird_evaluation_depth.slurm  mup_create_base_shape_file.py  nxt_evaluation.py  nxt_evaluation.slurm  prepare_checkpoint_release.sh  quality_evaluation.py  quality_evaluation.slurm  reconstruction_quality_eval.py  regain_index_from_train.py  test_dataloading.py  test_dataloading.sh  test_dataloading_ddp.py  test_dataloading_ddp.sh  video_qualitative_results.py
vam/: train.py
world_model/: eval.py  inference.py  train.py
(+258 files in other folders)
