[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vam"
version = "1.0.0"
description = "VaViM and VaVAM: Autonomous Driving through Video Generative Modeling (official repository)."
readme = "README.md"
requires-python = ">=3.8.0"
authors = [
    { name = "Florent Bartoccioni", email = "florent.bartoccioni@valeo.com" },
    { name = "Elias Ramzi", email = "elias.ramzi@valeo.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "lightning==2.4.0",
    "torchmetrics==1.4.3",
    "hydra-core==1.3.2",
    "hydra-colorlog==1.2.0",
    "mup @ git+https://github.com/microsoft/mup.git",
    "tqdm",
    "jupyter",
    "numpy",
    "pillow",
    "pyquaternion",
    "colorlog",
    "plotly",
    "prettytable",
    "clean-fid",
    "hyperqueue==0.19.0",
    "GitPython",
    "torchdata @ https://download.pytorch.org/whl/nightly/torchdata-0.11.0.dev20250103-py3-none-any.whl",
    # Depth Anything V2
]

[project.optional-dependencies]
dev = [
    "flake8",
    "flake8-annotations",
    "flake8-bugbear",
    "flake8-comprehensions",
    "flake8-simplify",
    "isort",
    "black[jupyter]",
    "ipython",
    "ipdb",
]
torch = [
    "torch==2.4.0",
    "torchvision>=0.19.0",
]

[project.urls]
Homepage = "https://github.com/valeoai/VideoActionModel"

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 127
target-version = ['py39']
include = '\.py?$'

[tool.isort]
atomic = true
profile = "black"
line_length = 127
skip_gitignore = true
